1.45  2025-11-11
    - Release jq-compatible try/catch flow control with docs and tests.

1.44  2025-11-10
    - Promote release to version 1.44 including the jq-compatible rest filter.

1.43  2025-11-09
    - Release jq-compatible @base64d formatter with documentation and tests.

1.42  2025-11-09
    - Release jq-compatible ascii_upcase filter along with docs and tests.

1.41  2025-11-08
    - Allow jq-lite --from-file/-f to load filters from STDIN while keeping
      JSON input separate from the shared handle.
    - Document the new STDIN support in the CLI usage text and add regression
      tests for the feature.

1.40  2025-11-08
    - Release jq-compatible ascii_downcase filter along with docs and tests.

1.39  2025-11-08
    - Add jq-compatible --arg option to the CLI and wire variables into the engine.
    - Allow passing initial variables when constructing JQ::Lite instances.
    - Document the new option and add regression tests for variable access.

1.38  2025-11-08
    - Release jq-compatible @json formatter support with documentation and tests.

1.37  2025-11-02
    - Release parenthesized pipeline evaluation improvements in expressions.

1.36  2025-11-02
    - Release jq-compatible @uri formatter and percent-encoding helper.
    - Declare Encode dependency and document formatter usage.

1.35  2025-11-01
    - Release base64 formatter support and dependency metadata updates.

1.34  2025-11-01
    - Publish homepage metadata updates for CPAN distribution listings.

1.33  2025-11-01
    - Skip YAML-related test on Perl 5.20–5.26 due to known incompatibility issues.
    - Updated test comments to English for consistency and clarity.

1.30  2025-10-25
  [Feature]
  - Add a jq-compatible @tsv formatter for tab-separated output with
    proper escaping of arrays and scalar values.

  [Release]
  - Bump version to 1.30.

1.29  2025-10-25
  [Feature]
  - Add jq-compatible comma sequence handling so each branch runs against the